set header footer links

--- a/source code/View/Header-Footer/NewHeaderFooter.html
+++ b/source code/View/Header-Footer/NewHeaderFooter.html
@@ -82,7 +82,7 @@
 <body>
 <!--Navbar -->
 <nav class="mb-1 navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand font-weight-4" href="#"><i class="fas fa-subway"></i> BOOKit</a>
+    <a class="navbar-brand font-weight-4" href="home.php"><i class="fas fa-subway"></i> BOOKit</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
             aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -91,10 +91,10 @@
 
         <ul class="navbar-nav ml-auto nav-flex-icons nav-element-center-cus">
             <li class="nav-item">
-                    <a class="nav-link" href="#">ABOUT US</a>
+                    <a class="nav-link" href="aboutUs.html">ABOUT US</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">CONTACT US</a>
+                <a class="nav-link" href="contactUs.php">CONTACT US</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#"><img src="../../resources/24-7%20support.png"></a>
@@ -106,8 +106,8 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-right dropdown-default"
                      aria-labelledby="navbarDropdownMenuLink-333">
-                    <a class="dropdown-item" href="#">SIGN IN</a>
-                    <a class="dropdown-item" href="#">MY ACCOUNT</a>
+                    <a class="dropdown-item" href="login.php">SIGN IN</a>
+                    <a class="dropdown-item" href="userAccount.php">MY ACCOUNT</a>
                 </div>
             </li>
         </ul>
@@ -140,7 +140,7 @@
             </button>
             <div class="dropdown-content font-vw-1">
                 <a href="#">Live Station</a>
-                <a href="station.html">Station Detail</a>
+                <a href="station.php">Station Detail</a>
             </div>
 
 
@@ -169,7 +169,7 @@
             </button>
             <div class="dropdown-content font-vw-1">
                 <a href="#">Seasons Tickets</a>
-                <a href="station.html">Seasons Fare calculator</a>
+                <a href="station.php">Seasons Fare calculator</a>
             </div>
 
 
@@ -259,10 +259,10 @@
 
                 <ul class="list-unstyled">
                     <li>
-                        <a href="#" >For Newly Migrated Agents</a> <br/>
+                        <a href="faq.html" >FAQ</a> <br/>
                     </li>
                     <li>
-                        <a href="#" >About us</a> <br/>
+                        <a href="aboutUs.html" >About us</a> <br/>
                     </li>
 
                 </ul>
