--- a/source code/Style/style-contactUs.css
+++ b/source code/Style/style-contactUs.css
@@ -2,23 +2,61 @@
 /* CSS Document */
 /* contactUs by gayan */
 
-body {
-    font-family: sans-serif;
-}
 
-/*make the page responsive*/
-.responsive-T {
-    margin-top: 15px;
-    width: 100%;
-    height: auto;
+body{
+    background: -webkit-linear-gradient(left, #0072ff, #00c6ff);
 }
-
-/**/
-.column-cus {
-    float: right;
+.contact-form{
+    background: #fff;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    width: 70%;
+}
+.contact-form .form-control{
+    border-radius:1rem;
+}
+.contact-image{
+    text-align: center;
+}
+.contact-image img{
+    border-radius: 6rem;
+    width: 11%;
+    margin-top: -3%;
+    transform: rotate(29deg);
+}
+.contact-form form{
+    padding: 14%;
+}
+.contact-form form .row{
+    margin-bottom: -7%;
+}
+.contact-form h3{
+    margin-bottom: 8%;
+    margin-top: -10%;
+    text-align: center;
+    color: #0062cc;
+}
+.contact-form .btnContact {
     width: 50%;
-    height: 100%;
+    border: none;
+    border-radius: 1rem;
+    padding: 1.5%;
+    background: red;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
 }
+.btnContactSubmit
+{
+    width: 50%;
+    border-radius: 1rem;
+    padding: 1.5%;
+    color: #fff;
+    background-color: #0062cc;
+    border: none;
+    cursor: pointer;
+}
+
 
 input[type=text] {
     width: 90%;
@@ -44,26 +82,10 @@ input[type=text] {
     user-select: none;
 }
 
-.button-T {
-    float: right;
-    background-color: blue;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    font-size: 20px;
-    display: inline-block;
-    margin: 4px 2px;
-    margin-right: 5%;
-    margin-bottom: 5%;
-    cursor: pointer;
+.frstbtn{
+    border-color: red !important;
 }
 
-img {
-    opacity: 0.5;
-    filter: alpha(opacity=50);
-    margin-top: 4%;
-    width: 977px;
-    height: 611px;
-    margin-left: 8px;
-    margin-right: 8px;
-  }
+.scndbtn{
+    border-color: red !important;
+}
