--- a/source code/View/Header-Footer/NewHeaderFooter.html
+++ b/source code/View/Header-Footer/NewHeaderFooter.html
@@ -96,8 +96,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="contactUs.php">CONTACT US</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#"><img src="../../resources/24-7%20support.png"></a>
+            <li class="nav-item adminPanel" id='adminlbl'>
+                <a class="nav-link" href="adminPanel.php">ADMIN</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
