--- a/source code/View/season.html
+++ b/source code/View/season.html
@@ -42,7 +42,7 @@
 		 
 		 <script>
 			 $(function () {
-                        $("#Header").html(getHeaderMD());
+                        $("#Header").html(getHeaderLG());
                         $("#footerID").html(getFooter());
 				});
 				
