finalize main things

--- a/source code/View/station.html
+++ b/source code/View/station.html
@@ -39,7 +39,7 @@
     <script>
         //Jquery function for load navigation to page
         $(function () {
-            $("#Header").html(getHeaderMD());
+            $("#Header").html(getHeaderLG());
             $("#footerID").html(getFooter());
         });
     </script>
