--- a/source code/View/payment.html
+++ b/source code/View/payment.html
@@ -48,7 +48,7 @@
         <script>
                 //Jquery function for load navigation to page
                 $(function () {
-                        $("#Header").html(getHeaderMD());
+                        $("#Header").html(getHeaderLG());
                         $("#footerID").html(getFooter());
                 });
 
